# moonlab

./: .dockerignore  .gitignore  .gitlab-ci.yml  ARCHITECTURE.md  AUDIT.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  COMMUNITY_EDITION.md  CONTRIBUTING.md  HANDOFF_CODEX.md  LICENSE  MATH.md  MOONLAB_RELEASE_ROADMAP.md  Makefile  PLATFORM.md  README.md  SECURITY.md  V1_RELEASE_ANALYSIS.md  cliff.toml  flake.nix  profile.csv  qsim_test  quantum_spin_chain_safe  quantum_spin_chain_v2  spin_chain_debug  spin_chain_fixed  spin_chain_test  webgpuplan.md
.github/: actionlint.yaml
.icc/: BUG_CLOSURE_CAMPAIGN.md  architecture-model.yaml  attestations.yaml  completion-oracles.yaml  modularity-justifications.json  phantom-api-allow.txt  production-audit.yaml
.swarm/: ADVERSARIAL_TESTING_CAMPAIGN.md
benchmarks/: control_plane_loadtest.c  decoder_shootout.c
bindings/python/: README.md  pyproject.toml  setup.py  test_moonlab.py
bindings/python/moonlab/: __init__.py  algorithms.py  benchmarks.py  ca_mps.py  ca_peps.py  chemistry.py  clifford.py  control_plane.py  core.py  decoder.py  diff.py  distributed.py  dmrg.py  error_mitigation.py  fusion.py  libirrep_qec.py  ml.py  mpdo.py  noise.py  qgtl.py  scheduler.py  surface_code.py  tdvp.py  token_bucket.py  topology.py  torch_layer.py
bindings/python/moonlab/crypto/: __init__.py  mlkem.py  sha3.py
bindings/python/moonlab/visualization/: __init__.py  circuit.py  feynman.py
bindings/python/tests/: __init__.py  conftest.py  test_algorithms.py  test_api_liveness.py  test_ca_mps.py  test_ca_peps.py  test_chemistry.py  test_clifford.py  test_control_plane.py  test_crypto.py  test_decoder.py  test_diff.py  test_distributed.py  test_dmrg.py  test_error_mitigation.py  test_fusion.py  test_gates.py  test_gpu_state.py  test_libirrep_qec.py  test_mpdo.py  test_noise.py  test_qgtl.py  test_quantum_state.py  test_release_version.py  test_scheduler.py  test_surface_code.py  test_tdvp.py  test_token_bucket.py  test_topology.py  test_topology_v03.py  test_torch_layer_backend_trace.py  test_vqe_ergonomics.py
bindings/rust/moonlab/: Cargo.toml  README.md  build.rs
bindings/rust/moonlab-sys/: Cargo.toml  README.md  build.rs
bindings/rust/moonlab-sys/src/: lib.rs
bindings/rust/moonlab-sys/tests/: ffi_liveness.rs
bindings/rust/moonlab-tui/: Cargo.toml  README.md  build.rs
bindings/rust/moonlab-tui/src/: app.rs  events.rs  main.rs
bindings/rust/moonlab-tui/src/ui/: amplitudes.rs  bloch.rs  circuit.rs  dashboard.rs  entropy.rs  feynman.rs  mod.rs
bindings/rust/moonlab/examples/: bell_demo.rs  ca_mps_demo.rs  ca_peps_demo.rs  clifford_demo.rs  feynman_demo.rs  fusion_demo.rs  grover_demo.rs  mpdo_demo.rs  noise_demo.rs  qaoa_demo.rs  tdvp_demo.rs  topology_demo.rs  vqe_demo.rs  z2_lgt_demo.rs
bindings/rust/moonlab/src/: admission_hook.rs  bell.rs  ca_mps.rs  ca_peps.rs  clifford.rs  control_plane.rs  decoder.rs  dmrg.rs  error.rs  feynman.rs  fusion.rs  grover.rs  lib.rs  libirrep_qec.rs  mpdo.rs  noise.rs  qaoa.rs  qgtl.rs  scheduler.rs  state.rs  surface_code.rs  tdvp.rs  token_bucket.rs  topology.rs  vqe.rs  z2_lgt.rs
bindings/rust/moonlab/tests/: admission_hook_e2e.rs  ca_mps_sample_z_e2e.rs  control_plane_auth_e2e.rs  control_plane_e2e.rs  control_plane_health_e2e.rs  control_plane_lifecycle_e2e.rs  control_plane_max_concurrent_e2e.rs  control_plane_metrics_e2e.rs  control_plane_mtls_e2e.rs  control_plane_safe_wrappers_e2e.rs  control_plane_shots_e2e.rs  control_plane_tenant_e2e.rs  control_plane_timeout_e2e.rs  control_plane_tls_e2e.rs  dmrg_energy.rs  integration_tests.rs
cmake/: compiler_flags.cmake  examples.cmake  install.cmake  moonlab_build_info.h.in  quantumsim-config.cmake.in  quantumsim.pc.in  tests.cmake
docker/: docker-compose.yml
docs/: 50_QUBIT_PERFECT_FIDELITY_APPLICATIONS.md  BREAKTHROUGH_ADDENDUM.md  CI_CD.md  CLOUD_DEPLOYMENT_EXECUTIVE_SUMMARY.md  CONTROL_PLANE.md  DEVELOPMENT_STATUS.md  DISTRIBUTED_CLOUD_DEPLOYMENT_REPORT.md  DOCUMENTATION_SYNC_STATUS.md  EXTENSION_SURFACES.md  HIGH_PERFORMANCE_CLOUD_DEPLOYMENT.md  INTEGRATION_libirrep_SbNN.md  MOONLAB_ECOSYSTEM_INTEGRATION.md  MOONLAB_TECHNICAL_REPORT.md  MOONLAB_WEBSITE_OVERVIEW.md  PARITY_MATRIX.md  QAOA_QUANTUM_ADVANTAGE.md  README.md  SCALING_BEYOND_50_QUBITS.md  STABLE_ABI.md  WINDOWS.md  WORLD_CLASS_SIMULATOR_ROADMAP.md  error_codes.md  faq.md  getting-started.md  index.html  index.md  installation.md  moonlab-worker.js  moonlab.js  (+2 more)
tests/concurrency/: CMakeLists.txt  FINDINGS.md  conc_audit_buffer.c  conc_clifford_measurement.c  conc_control_plane.c  conc_core_init.c  conc_entropy_pool.c  conc_grover_gates.c  conc_scheduler.c  tsan.supp
tests/differential/rust/: Cargo.toml
tests/differential/rust/src/: main.rs
tests/fuzz/: CMakeLists.txt  FINDINGS.md  fuzz_common.h  fuzz_driver.c  fuzz_target_abi_boundary.c  fuzz_target_circuit_deserialize.c  fuzz_target_config_parse.c  fuzz_target_control_plane_protocol.c  fuzz_target_entropy_input.c  fuzz_target_mlkem_decode.c  gen_seeds.c
tests/fuzz/corpora/circuit_deserialize_fuzz/: boundary_badqubits.txt  boundary_missing_theta.txt  boundary_noheader.txt  boundary_overlong_line.txt  regress-embedded-nul-hang  regress-overlong-final-line-rejected  valid_bell.txt  valid_rot.txt  valid_swap.txt
tests/fuzz/corpora/config_parse_fuzz/: backend_str.txt  partial.json  valid.json  weird.json
tests/fuzz/corpora/control_plane_protocol_fuzz/: regress-embedded-nul-hang
tests/fuzz/corpora/control_plane_protocol_fuzz/crashes-pending/: README.md
tests/fuzz/dicts/: circuit_deserialize_fuzz.dict  config_parse_fuzz.dict  control_plane_protocol_fuzz.dict
tests/numerical/: CMakeLists.txt  FINDINGS.md  gpu_stubs.c  numerical_common.h  t_dmrg.c  t_eigen.c  t_measure.c  t_qft.c  t_rotations.c  t_svd.c
tests/scaling/: CMakeLists.txt  FINDINGS.md  KNOWN_DIVERGENCES.txt  gen_scaling_corpus.py  scaling_diff.c  scaling_dmrg_tdvp.c  scaling_stab.c  scaling_var_d.c
tests/statistical/: CMakeLists.txt  stat_common.h  test_entropy_health_adversarial.c  test_mlkem_adversarial.c  test_mlkem_timing.c  test_qrng_battery.c
(+1086 files in other folders)
